added change dir

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,14 @@ SLACK_SIGNING_SECRET=your-signing-secret
 # Your Slack user ID (only this user can interact with the bot)
 ALLOWED_USER_ID=U0XXXXXXXXX
 
-# Default working directory for OpenCode (used if not set per-conversation)
+# Default working directory for OpenCode (used if no folder is picked)
 OPENCODE_DEFAULT_DIR=/path/to/your/project
 
-# OpenCode binary path (optional, defaults to "opencode")
-OPENCODE_BIN=opencode
+# Bookmarked project folders (comma-separated, shown as quick-pick buttons)
+OPENCODE_PROJECTS=/path/to/project-a,/path/to/project-b
+
+# Root directory for the folder browser (defaults to $HOME)
+OPENCODE_BROWSE_ROOT=/Users/you
+
+# OpenCode binary path (optional, defaults to ~/.opencode/bin/opencode)
+# OPENCODE_BIN=opencode
